--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ep10 React Router Part 3</title>
+    <title>Ep10 React Data Route</title>
   </head>
   <body>
     <div id="root"></div>
